Hacky fix to hide overflow-x in info window
There is no way to reference the parent of the info window card to override the
overflow:auto attribute, so I manually added an id to this element and set the
overflow-x to hidden (the style is set inline so we can't (shouldn't) use an external
stylesheet)

--- a/static/css/geo.css
+++ b/static/css/geo.css
@@ -35,3 +35,10 @@ body, html {
     bottom: 20px;
     background-color: transparent;
 }
+
+#infoWindowCard {
+    width: 300px;
+    box-shadow: none;
+    margin:0;
+    height:258px;
+}
