--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,7 @@
+body {
+    font-size: 16px;
+}
+
 #logo {
     font-weight: bold;
     padding-right: 10px;
